--- a/front-end-project-designs/lamda-notes/src/index.css
+++ b/front-end-project-designs/lamda-notes/src/index.css
@@ -9,8 +9,14 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background-color: #f3f3f3;
 }
 
 h1 {
   font-size: 4rem;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
